--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.1",
     "jnj-lib-base": "^0.0.44",
     "jnj-lib-google": "^0.0.14",
+    "playwright": "^1.48.1",
     "youtube-captions-scraper": "^2.0.3"
   },
   "devDependencies": {
